[project]
name = "welcomebot"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon Wardan",email = "simon@wardan.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "deepface (>=0.0.95,<0.0.96)",
    "tf-keras (>=2.20.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
